--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -16,4 +16,9 @@
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Shared\" />
+    <Folder Include="wwwroot\assets\img\publicbackgrounds\" />
+  </ItemGroup>
+
 </Project>
