--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -23,4 +23,8 @@
     <Folder Include="wwwroot\assets\img\publicbackgrounds\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.csproj" />
+  </ItemGroup>
+
 </Project>
