--- a/.github/workflows/PatrickNorthServer.yml
+++ b/.github/workflows/PatrickNorthServer.yml
@@ -8,7 +8,7 @@ env:
   AZURE_WEBAPP_PACKAGE_PATH: Server/publish
   AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.PatrickNorthServer_5e28 }}
   CONFIGURATION: Release
-  DOTNET_CORE_VERSION: 6.0.x
+  DOTNET_CORE_VERSION: 6.0.100-rc.2.21505.57
   WORKING_DIRECTORY: Server
 jobs:
   build-and-deploy:
