Expanding the Skills page

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Shared\" />
+    <Folder Include="wwwroot\assets\img\skillsicons\" />
     <Folder Include="wwwroot\assets\img\publicbackgrounds\" />
   </ItemGroup>
 
