--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -21,6 +21,7 @@
     <Folder Include="Shared\" />
     <Folder Include="wwwroot\assets\img\skillsicons\" />
     <Folder Include="wwwroot\assets\img\publicbackgrounds\" />
+    <Folder Include="wwwroot\assets\docs\" />
   </ItemGroup>
 
   <ItemGroup>
