--- a/.github/workflows/ServerCICD.yml
+++ b/.github/workflows/ServerCICD.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Set up .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '6.0.100-rc.2.21505.57'
+        dotnet-version: '6.0.x'
         include-prerelease: true
 
     - name: Build and publish
