--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="Shared\" />
+    <Folder Include="wwwroot\assets\img\admincards\" />
     <Folder Include="wwwroot\assets\img\skillsicons\" />
     <Folder Include="wwwroot\assets\img\publicbackgrounds\" />
     <Folder Include="wwwroot\assets\docs\" />
