Setup ASP.NET Identity for ther Server

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,5 +1,5 @@
 {
-   "ConnectionStrings": {
+  "ConnectionStrings": {
     "DefaultConnection": "Data Source=./Data/AppDB.db"
   },
   "Logging": {
@@ -9,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "niff02ce-0053-4tit-9777-31a7d18czebd",
+    "Issuer": "johndoe.com"
+  }
 }
